# Voting-System

./: .gitignore  README.md
blockchain/: Cargo.toml
blockchain/scenarios/: blockchain.scen.json
blockchain/src/: blockchain.rs  storage.rs  voting-system.rs
blockchain/tests/: blockchain_scenario_go_test.rs  blockchain_scenario_rs_test.rs  proxy.rs
frontend/: Requirements.md  next.config.mjs  package-lock.json  package.json  server.js  tailwind.config.ts  tsconfig.json  wallets.csv
frontend/abis/: blockchain.abi.json  voting-system.abi.json
frontend/app/: layout.tsx  page.tsx
frontend/app/campaigns/: page.tsx
frontend/app/create-vote/: page.tsx
frontend/app/faq/: page.tsx
frontend/app/features/: page.tsx
frontend/app/how-it-works/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: client-providers.tsx  environment-switcher.tsx  mobile-menu.tsx  site-header.tsx  site-layout.tsx  wallet-header.tsx
frontend/components/ui/: calendar.tsx
frontend/config/: config.devnet.ts  index.ts
frontend/hooks/: useMerkleProof.ts
frontend/hooks/queries/: useGetAllCampaigns.ts  useGetCampaignDetails.ts  useGetTalliedVotes.ts
frontend/hooks/transactions/: useCloseCampaignTx.ts  useCreateCampaignTx.ts  useSimpleVoteTx.ts
frontend/lib/: utils.ts
frontend/lib/utils/: merkleTree.ts  smartContract.ts
relayers-service/: package-lock.json  package.json
relayers-service/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
relayers-service/src/contract-config/: contract-config.service.spec.ts  contract-config.service.ts
(+11 files in other folders)
