[package]
name = "blockchain"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/blockchain.rs"

[dependencies.multiversx-sc]
version = "0.58.0"

[dev-dependencies]
num-bigint = "0.4"
multiversx-sc-scenario = { version = "0.58.0", features = ["wasmer-experimental"] }


[workspace]
members = [
    ".",
    "meta",
]
